acrescentar perfil no grupo

--- a/src/app/data-environment/workspace/group/group.component.css
+++ b/src/app/data-environment/workspace/group/group.component.css
@@ -11,3 +11,20 @@
     text-align: center;
     margin-top: 15px;
 }
+.hover-red {
+    color: #555;
+    transition: 0.3s;
+}
+
+.hover-red:hover {
+    color: #FF6677;
+}
+
+.hover-green {
+    color: #555;
+    transition: 0.3s;
+}
+
+.hover-green:hover {
+    color: rgb(31, 129, 93);
+}
